finalizado a marcação e estilo das sessões que, juntas, compoem a estrutura da informação

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
   <title>All Hands! 1.0 - CS Team</title>
 </head>
 <body>
@@ -253,6 +254,40 @@
       </li>
     </ul> 
 
+  </div>
+
+</section>
+
+<!--Agenda-->
+<section class="container seventh_container">
+  <h1 class="title">Agenda</h1>
+  <img src="./img/lunar_man_hanglose.png" alt="lunar_man_hanglose">
+
+  <div class="container container_row">
+    <div class="container container_sidebyside">
+      <ul>
+        <li>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus commodi quod sunt sint maxime nemo repellat</p>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus commodi quod sunt sint maxime nemo repellat</p>
+        </li>
+      </ul>    
+    </div>
+    <div class="container container_sidebyside">
+      <ul>
+        <li>
+          <a class="data">30/02</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a class="data">30/02</a>
+        </li>
+      </ul>    
+    </div>
   </div>
 
 </section>
