adicionado novo estilo, marcação e função JS para animar o header principal da main section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--Main Section-->
   <section class="container main_container">    
     <div id="main_title">
-      <h1 class="title">Log da Missão</h1>
+      <h1 class="title animated_tittle">Log da Missão</h1>
       <h2>resultados preliminares e perspectivas futuras</h2>
     </div>    
     
@@ -291,6 +291,8 @@
   </div>
 
   </section>
+
+  <script src="./js/script.js"></script>
 
 </body>
 </html>
