--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <li><a href="#">O time de CS - </a></li>
         <li><a href="#">Indicadores e Objetivo - </a></li>
         <li><a href="#">Customer Centricity - </a></li>
-        <li><a href="#">Feedback Loop - </a></li>
         <li><a href="#">Próximos Passos</a></li>
       </ul>
     </div>
@@ -79,33 +78,26 @@
             <p>CSAT CHAT</p>
           </li>
           <li>
-            <p>CSAT Ticket</p>
-          </li>
-          <li>
             <p>TMR</p>
           </li>
           <li>
-            <p>QTD Tickets</p>
+            <p>TME</p>
           </li>
         </ul>
 
         <ul id="matrics_values">
           <li>
-            <label for="p">100%</label>
-            <p>98%</p>            
+            <label for="p">94%</label>
+            <p>89%</p>            
           </li>
 
           <li>
-            <label for="p">100%</label>
-            <p>98%</p>
+            <label for="p">25min</label>
+            <p>42min</p>
           </li>
           <li>
-            <label for="p">100%</label>
-            <p>98%</p>
-          </li>
-          <li>
-            <label for="p">100%</label>
-            <p>98%</p>
+            <label for="p">5min</label>
+            <p>17min</p>
           </li>
         </ul>
       </div>
@@ -160,22 +152,6 @@
 
   </section>
 
-  <!--Feedback Loop-->
-  <section class="container fifth_container">
-    <h1 class="title">Feedback Loop</h1>
-    <img src="img/lunar_man.png" alt="">
-    
-    <ul>
-      <li>
-        <p>Resultados Financeiros são produto da satisfação de clientes que
-          continuam a usar serviços e produtos pois tem uma boa
-          experiência de consumo dos mesmos e estes serviços e produtos
-          dependem, por sua vez, da qualidade dos processos internos.</p>
-      </li>      
-    </ul>
-    
-  </section>
-
   <!--Next steps-->
   <section class="container sixth_container">
 
@@ -184,7 +160,7 @@
 
   <div class="container container_row">
 
-    <ul id="list_nextsteps">
+    <ul class="list_nextsteps list_problema">
       <li>
         <p>
           Problema
@@ -192,22 +168,22 @@
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Tempo médio de espera na fila de chat muito alto
         </p>
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Tempo médio de espera por atendimento muito alto (cerca de 24 min. hoje)
         </p>
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Falta de informações/conteúdo (conhecimento do cliente)
         </p>
       </li>
     </ul>
 
-    <ul id="list_nextsteps">
+    <ul class="list_nextsteps list_proposta">
       <li>
         <p>
           Solução proposta
@@ -215,22 +191,22 @@
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Construção da central de ajuda, criação de conteúdo relevante
         </p>
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Capacitação dos integrantes do time e reestruturação deste
         </p>
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Criação de conteúdo relevante: vídeos, tutoriais, gifs de 'how-to', etc.
         </p>
       </li>
     </ul> 
 
-    <ul id="list_nextsteps">
+    <ul class="list_nextsteps list_indicador">
       <li>
         <p>
           Indicador Associado
@@ -238,17 +214,17 @@
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Satisfação 94% - Redução de contatos, com crescimento de base ativa.
         </p>
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Tempo médio de atendimento 20 minutos
         </p>
       </li>
       <li>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur adipisicing elit. Nulla
+          Tempo de primeira resposta ao ticket: 1 hora
         </p>
       </li>
     </ul> 
