final final adjustments rs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#">O time de CS - </a></li>
         <li><a href="#">Indicadores e Objetivo - </a></li>
         <li><a href="#">Customer Centricity - </a></li>
-        <li><a href="#">Próximos Passos</a></li>
+        <li><a href="#agenda">Próximos Passos</a></li>
       </ul>
     </div>
   </section>
@@ -235,33 +235,35 @@
 
 <!--Agenda-->
   <section class="container seventh_container">
-  <h1 class="title">Agenda</h1>
+  <h1 class="title" id="agenda">Agenda</h1>
   <img src="./img/lunar_man_hanglose.png" alt="lunar_man_hanglose">
 
   <div class="container container_row">
     <div class="container container_sidebyside">
-      <ul>
+      <ul class="agenda_event_list">
         <li>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus commodi quod sunt sint maxime nemo repellat</p>
+          <p>Treinamento Plano orçamentário</p>
         </li>
-      </ul>
-      <ul>
         <li>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus commodi quod sunt sint maxime nemo repellat</p>
+          <p>Palestra CNV ORGANIZACIONAL - Gabriela Ghion</p>
+        </li>
+        <li>
+          <p>Treinamento DRE</p>
         </li>
       </ul>    
     </div>
     <div class="container container_sidebyside">
-      <ul>
+      <ul class="agenda_data_list">
         <li>
-          <a class="data">30/02</a>
+          <a class="data">05/02</a>
         </li>
-      </ul>
-      <ul>
         <li>
-          <a class="data">30/02</a>
+          <a class="data">06/02</a>
         </li>
-      </ul>    
+        <li>
+          <a class="data">13/02</a>
+        </li>
+      </ul>       
     </div>
   </div>
 
