final adjustment, i promisse

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p>CSAT CHAT</p>
           </li>
           <li>
-            <p>TMR</p>
+            <p>TMA</p>
           </li>
           <li>
             <p>TME</p>
